# ttp-idm

./: .gitleaksignore  .mega-linter.yml  .releaserc.json  Cargo.toml  Dockerfile  README.md  app.yaml
.github/: renovate.json
.github/workflows/: build.yaml  lint.yml  mega-linter.yml  release.yaml  security.yaml
api-docs/: openapi.json
auth/: Cargo.toml
auth/src/: lib.rs  oauth.rs  oidc.rs  validator.rs
auth/tests/: integration_test.rs
dev/: compose.yaml
dev/sqls/: README.md
resources/: matching_config.xml
src/: api.rs  client.rs  config.rs  error.rs  main.rs  model.rs  server.rs  ttp.rs
src/ttp/: client.rs  epix.rs  gpas.rs
src/ttp/epix/: model.rs  soap.rs
src/ttp/gpas/: model.rs
