[package]
name = "ttp-idm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "auth"]

[dependencies]
auth = { path = "auth" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
config = "0.15.13"
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
log = "0.4.28"
fhir-model = { version = "0.12.1", default-features = false, features = ["r4b", "builders"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
time = { version = "0.3.44", default-features = false, features = ["serde", "parsing"] }
serde-xml-rs = "0.8.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
axum-test = "18.2.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
shadow-rs = "1.7.0"

[dev-dependencies]
httpmock = "0.8.1"

[build-dependencies]
shadow-rs = "1.7.0"
