[package]
name = "auth"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
oauth2 = "5.0.0"
thiserror = "2.0.12"
log = "0.4.27"
async-oidc-jwt-validator = "0.1.2"
serde_json = "1.0.143"
jsonwebtoken = "9.3.1"
http = "1.3.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

