[package]
name = "auth"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
oauth2 = "5.0.0"
thiserror = "2.0.12"
log = "0.4.27"
async-oidc-jwt-validator = "0.1.2"
jsonwebtoken = "9.3.1"
http = "1.3.1"
axum-extra = { version = "0.12.2", features = ["typed-header"] }

