[package]
name = "auth"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
oauth2 = "5.0.0"
thiserror = "2.0.12"
log = "0.4.27"
jsonwebtoken = "10.3.0"
http = "1.3.1"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
httpmock = "0.8.1"
serde_json = "1.0.141"
axum-test = { version = "18.0.1", features = ["pretty-assertions"] }
tokio = "1.48.0"
chrono = "0.4.42"
